Chococino/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Chococino/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	ListTopDef -> TopDef                               (6)
	ListTopDef -> TopDef ListTopDef                    (7)
	Arg -> Type Ident                                  (8)
	Arg -> Type '&' Ident                              (9)
	ListArg ->                                         (10)
	ListArg -> Arg                                     (11)
	ListArg -> Arg ',' ListArg                         (12)
	Block -> '{' ListStmt '}'                          (13)
	ListStmt ->                                        (14)
	ListStmt -> Stmt ListStmt                          (15)
	Stmt -> ';'                                        (16)
	Stmt -> Block                                      (17)
	Stmt -> Type ListItem ';'                          (18)
	Stmt -> Type ArrExpr                               (19)
	Stmt -> Ident '=' Expr ';'                         (20)
	Stmt -> ArrExpr '=' Expr ';'                       (21)
	Stmt -> Ident '++' ';'                             (22)
	Stmt -> Ident '--' ';'                             (23)
	Stmt -> 'return' Expr ';'                          (24)
	Stmt -> 'return' ';'                               (25)
	Stmt -> 'if' '(' Expr ')' Block                    (26)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (27)
	Stmt -> 'while' '(' Expr ')' Stmt                  (28)
	Stmt -> Expr ';'                                   (29)
	Stmt -> 'break'                                    (30)
	Stmt -> 'continue'                                 (31)
	Stmt -> TopDef ';'                                 (32)
	Item -> Ident                                      (33)
	Item -> Ident '=' Expr                             (34)
	ListItem -> Item                                   (35)
	ListItem -> Item ',' ListItem                      (36)
	Type -> 'int'                                      (37)
	Type -> 'string'                                   (38)
	Type -> 'boolean'                                  (39)
	Type -> 'void'                                     (40)
	Type -> 'function' '<' Type '(' ListType ')' '>'   (41)
	ListType ->                                        (42)
	ListType -> Type                                   (43)
	ListType -> Type ',' ListType                      (44)
	ArrExpr -> Ident '[' Expr ']'                      (45)
	ArrExpr -> ArrExpr '[' Expr ']'                    (46)
	Expr6 -> Ident                                     (47)
	Expr6 -> Integer                                   (48)
	Expr6 -> 'true'                                    (49)
	Expr6 -> 'false'                                   (50)
	Expr6 -> Ident '(' ListExpr ')'                    (51)
	Expr6 -> String                                    (52)
	Expr6 -> ArrExpr                                   (53)
	Expr6 -> '(' Expr ')'                              (54)
	Expr5 -> '-' Expr6                                 (55)
	Expr5 -> '!' Expr6                                 (56)
	Expr5 -> Expr6                                     (57)
	Expr4 -> Expr4 MulOp Expr5                         (58)
	Expr4 -> Expr5                                     (59)
	Expr3 -> Expr3 AddOp Expr4                         (60)
	Expr3 -> Expr4                                     (61)
	Expr2 -> Expr2 RelOp Expr3                         (62)
	Expr2 -> Expr3                                     (63)
	Expr1 -> Expr2 '&&' Expr1                          (64)
	Expr1 -> Expr2                                     (65)
	Expr -> Expr1 '||' Expr                            (66)
	Expr -> Lambda                                     (67)
	Expr -> Expr1                                      (68)
	ListExpr ->                                        (69)
	ListExpr -> Expr                                   (70)
	ListExpr -> Expr ',' ListExpr                      (71)
	Lambda -> 'lambda' '<' Type '(' ListArg ')' '>' Block   (72)
	AddOp -> '+'                                       (73)
	AddOp -> '-'                                       (74)
	MulOp -> '*'                                       (75)
	MulOp -> '/'                                       (76)
	MulOp -> '%'                                       (77)
	RelOp -> '<'                                       (78)
	RelOp -> '<='                                      (79)
	RelOp -> '>'                                       (80)
	RelOp -> '>='                                      (81)
	RelOp -> '=='                                      (82)
	RelOp -> '!='                                      (83)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'['            { PT _ (TS _ 22) }
	']'            { PT _ (TS _ 23) }
	'boolean'      { PT _ (TS _ 24) }
	'break'        { PT _ (TS _ 25) }
	'continue'     { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'false'        { PT _ (TS _ 28) }
	'function'     { PT _ (TS _ 29) }
	'if'           { PT _ (TS _ 30) }
	'int'          { PT _ (TS _ 31) }
	'lambda'       { PT _ (TS _ 32) }
	'return'       { PT _ (TS _ 33) }
	'string'       { PT _ (TS _ 34) }
	'true'         { PT _ (TS _ 35) }
	'void'         { PT _ (TS _ 36) }
	'while'        { PT _ (TS _ 37) }
	'{'            { PT _ (TS _ 38) }
	'||'           { PT _ (TS _ 39) }
	'}'            { PT _ (TS _ 40) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rule  5
	ListTopDef      rules 6, 7
	Arg             rules 8, 9
	ListArg         rules 10, 11, 12
	Block           rule  13
	ListStmt        rules 14, 15
	Stmt            rules 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32
	Item            rules 33, 34
	ListItem        rules 35, 36
	Type            rules 37, 38, 39, 40, 41
	ListType        rules 42, 43, 44
	ArrExpr         rules 45, 46
	Expr6           rules 47, 48, 49, 50, 51, 52, 53, 54
	Expr5           rules 55, 56, 57
	Expr4           rules 58, 59
	Expr3           rules 60, 61
	Expr2           rules 62, 63
	Expr1           rules 64, 65
	Expr            rules 66, 67, 68
	ListExpr        rules 69, 70, 71
	Lambda          rule  72
	AddOp           rules 73, 74
	MulOp           rules 75, 76, 77
	RelOp           rules 78, 79, 80, 81, 82, 83

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 6)
	ListTopDef -> TopDef . ListTopDef                   (rule 7)

	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11
	%eof           reduce using rule 6

	TopDef         goto state 4
	ListTopDef     goto state 14
	Type           goto state 6

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)

	L_Ident        shift, and enter state 2

	Ident          goto state 13

State 7

	Type -> 'boolean' .                                 (rule 39)

	'&'            reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	','            reduce using rule 39
	L_Ident        reduce using rule 39


State 8

	Type -> 'function' . '<' Type '(' ListType ')' '>'    (rule 41)

	'<'            shift, and enter state 12


State 9

	Type -> 'int' .                                     (rule 37)

	'&'            reduce using rule 37
	'('            reduce using rule 37
	')'            reduce using rule 37
	','            reduce using rule 37
	L_Ident        reduce using rule 37


State 10

	Type -> 'string' .                                  (rule 38)

	'&'            reduce using rule 38
	'('            reduce using rule 38
	')'            reduce using rule 38
	','            reduce using rule 38
	L_Ident        reduce using rule 38


State 11

	Type -> 'void' .                                    (rule 40)

	'&'            reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	','            reduce using rule 40
	L_Ident        reduce using rule 40


State 12

	Type -> 'function' '<' . Type '(' ListType ')' '>'    (rule 41)

	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Type           goto state 16

State 13

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 15


State 14

	ListTopDef -> TopDef ListTopDef .                   (rule 7)

	%eof           reduce using rule 7


State 15

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 10
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Arg            goto state 18
	ListArg        goto state 19
	Type           goto state 20

State 16

	Type -> 'function' '<' Type . '(' ListType ')' '>'    (rule 41)

	'('            shift, and enter state 17


State 17

	Type -> 'function' '<' Type '(' . ListType ')' '>'    (rule 41)

	')'            reduce using rule 42
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Type           goto state 25
	ListType       goto state 26

State 18

	ListArg -> Arg .                                    (rule 11)
	ListArg -> Arg . ',' ListArg                        (rule 12)

	')'            reduce using rule 11
	','            shift, and enter state 24


State 19

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 23


State 20

	Arg -> Type . Ident                                 (rule 8)
	Arg -> Type . '&' Ident                             (rule 9)

	'&'            shift, and enter state 22
	L_Ident        shift, and enter state 2

	Ident          goto state 21

State 21

	Arg -> Type Ident .                                 (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 22

	Arg -> Type '&' . Ident                             (rule 9)

	L_Ident        shift, and enter state 2

	Ident          goto state 32

State 23

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 31

	Block          goto state 30

State 24

	ListArg -> Arg ',' . ListArg                        (rule 12)

	')'            reduce using rule 10
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Arg            goto state 18
	ListArg        goto state 29
	Type           goto state 20

State 25

	ListType -> Type .                                  (rule 43)
	ListType -> Type . ',' ListType                     (rule 44)

	')'            reduce using rule 43
	','            shift, and enter state 28


State 26

	Type -> 'function' '<' Type '(' ListType . ')' '>'    (rule 41)

	')'            shift, and enter state 27


State 27

	Type -> 'function' '<' Type '(' ListType ')' . '>'    (rule 41)

	'>'            shift, and enter state 65


State 28

	ListType -> Type ',' . ListType                     (rule 44)

	')'            reduce using rule 42
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Type           goto state 25
	ListType       goto state 64

State 29

	ListArg -> Arg ',' ListArg .                        (rule 12)

	')'            reduce using rule 12


State 30

	TopDef -> Type Ident '(' ListArg ')' Block .        (rule 5)

	';'            reduce using rule 5
	'boolean'      reduce using rule 5
	'function'     reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	%eof           reduce using rule 5


State 31

	Block -> '{' . ListStmt '}'                         (rule 13)

	'!'            shift, and enter state 50
	'('            shift, and enter state 51
	'-'            shift, and enter state 52
	';'            shift, and enter state 53
	'boolean'      shift, and enter state 7
	'break'        shift, and enter state 54
	'continue'     shift, and enter state 55
	'false'        shift, and enter state 56
	'function'     shift, and enter state 8
	'if'           shift, and enter state 57
	'int'          shift, and enter state 9
	'lambda'       shift, and enter state 58
	'return'       shift, and enter state 59
	'string'       shift, and enter state 10
	'true'         shift, and enter state 60
	'void'         shift, and enter state 11
	'while'        shift, and enter state 61
	'{'            shift, and enter state 31
	'}'            reduce using rule 14
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 62
	L_quoted       shift, and enter state 63

	Ident          goto state 33
	Integer        goto state 34
	String         goto state 35
	TopDef         goto state 36
	Block          goto state 37
	ListStmt       goto state 38
	Stmt           goto state 39
	Type           goto state 40
	ArrExpr        goto state 41
	Expr6          goto state 42
	Expr5          goto state 43
	Expr4          goto state 44
	Expr3          goto state 45
	Expr2          goto state 46
	Expr1          goto state 47
	Expr           goto state 48
	Lambda         goto state 49

State 32

	Arg -> Type '&' Ident .                             (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9


State 33

	Stmt -> Ident . '=' Expr ';'                        (rule 20)
	Stmt -> Ident . '++' ';'                            (rule 22)
	Stmt -> Ident . '--' ';'                            (rule 23)
	ArrExpr -> Ident . '[' Expr ']'                     (rule 45)
	Expr6 -> Ident .                                    (rule 47)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 51)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	'('            shift, and enter state 102
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	'++'           shift, and enter state 103
	'-'            reduce using rule 47
	'--'           shift, and enter state 104
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'='            shift, and enter state 105
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'['            shift, and enter state 106
	'||'           reduce using rule 47


State 34

	Expr6 -> Integer .                                  (rule 48)

	'!='           reduce using rule 48
	'%'            reduce using rule 48
	'&&'           reduce using rule 48
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'/'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	']'            reduce using rule 48
	'||'           reduce using rule 48


State 35

	Expr6 -> String .                                   (rule 52)

	'!='           reduce using rule 52
	'%'            reduce using rule 52
	'&&'           reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	']'            reduce using rule 52
	'||'           reduce using rule 52


State 36

	Stmt -> TopDef . ';'                                (rule 32)

	';'            shift, and enter state 101


State 37

	Stmt -> Block .                                     (rule 17)

	'!'            reduce using rule 17
	'('            reduce using rule 17
	'-'            reduce using rule 17
	';'            reduce using rule 17
	'boolean'      reduce using rule 17
	'break'        reduce using rule 17
	'continue'     reduce using rule 17
	'false'        reduce using rule 17
	'function'     reduce using rule 17
	'if'           reduce using rule 17
	'int'          reduce using rule 17
	'lambda'       reduce using rule 17
	'return'       reduce using rule 17
	'string'       reduce using rule 17
	'true'         reduce using rule 17
	'void'         reduce using rule 17
	'while'        reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	L_Ident        reduce using rule 17
	L_integ        reduce using rule 17
	L_quoted       reduce using rule 17


State 38

	Block -> '{' ListStmt . '}'                         (rule 13)

	'}'            shift, and enter state 100


State 39

	ListStmt -> Stmt . ListStmt                         (rule 15)

	'!'            shift, and enter state 50
	'('            shift, and enter state 51
	'-'            shift, and enter state 52
	';'            shift, and enter state 53
	'boolean'      shift, and enter state 7
	'break'        shift, and enter state 54
	'continue'     shift, and enter state 55
	'false'        shift, and enter state 56
	'function'     shift, and enter state 8
	'if'           shift, and enter state 57
	'int'          shift, and enter state 9
	'lambda'       shift, and enter state 58
	'return'       shift, and enter state 59
	'string'       shift, and enter state 10
	'true'         shift, and enter state 60
	'void'         shift, and enter state 11
	'while'        shift, and enter state 61
	'{'            shift, and enter state 31
	'}'            reduce using rule 14
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 62
	L_quoted       shift, and enter state 63

	Ident          goto state 33
	Integer        goto state 34
	String         goto state 35
	TopDef         goto state 36
	Block          goto state 37
	ListStmt       goto state 99
	Stmt           goto state 39
	Type           goto state 40
	ArrExpr        goto state 41
	Expr6          goto state 42
	Expr5          goto state 43
	Expr4          goto state 44
	Expr3          goto state 45
	Expr2          goto state 46
	Expr1          goto state 47
	Expr           goto state 48
	Lambda         goto state 49

State 40

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	Stmt -> Type . ListItem ';'                         (rule 18)
	Stmt -> Type . ArrExpr                              (rule 19)

	L_Ident        shift, and enter state 2

	Ident          goto state 95
	Item           goto state 96
	ListItem       goto state 97
	ArrExpr        goto state 98

State 41

	Stmt -> ArrExpr . '=' Expr ';'                      (rule 21)
	ArrExpr -> ArrExpr . '[' Expr ']'                   (rule 46)
	Expr6 -> ArrExpr .                                  (rule 53)

	'!='           reduce using rule 53
	'%'            reduce using rule 53
	'&&'           reduce using rule 53
	'*'            reduce using rule 53
	'+'            reduce using rule 53
	'-'            reduce using rule 53
	'/'            reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'='            shift, and enter state 93
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	'['            shift, and enter state 94
	'||'           reduce using rule 53


State 42

	Expr5 -> Expr6 .                                    (rule 57)

	'!='           reduce using rule 57
	'%'            reduce using rule 57
	'&&'           reduce using rule 57
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'/'            reduce using rule 57
	';'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'=='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	']'            reduce using rule 57
	'||'           reduce using rule 57


State 43

	Expr4 -> Expr5 .                                    (rule 59)

	'!='           reduce using rule 59
	'%'            reduce using rule 59
	'&&'           reduce using rule 59
	')'            reduce using rule 59
	'*'            reduce using rule 59
	'+'            reduce using rule 59
	','            reduce using rule 59
	'-'            reduce using rule 59
	'/'            reduce using rule 59
	';'            reduce using rule 59
	'<'            reduce using rule 59
	'<='           reduce using rule 59
	'=='           reduce using rule 59
	'>'            reduce using rule 59
	'>='           reduce using rule 59
	']'            reduce using rule 59
	'||'           reduce using rule 59


State 44

	Expr4 -> Expr4 . MulOp Expr5                        (rule 58)
	Expr3 -> Expr4 .                                    (rule 61)

	'!='           reduce using rule 61
	'%'            shift, and enter state 90
	'&&'           reduce using rule 61
	')'            reduce using rule 61
	'*'            shift, and enter state 91
	'+'            reduce using rule 61
	','            reduce using rule 61
	'-'            reduce using rule 61
	'/'            shift, and enter state 92
	';'            reduce using rule 61
	'<'            reduce using rule 61
	'<='           reduce using rule 61
	'=='           reduce using rule 61
	'>'            reduce using rule 61
	'>='           reduce using rule 61
	']'            reduce using rule 61
	'||'           reduce using rule 61

	MulOp          goto state 89

State 45

	Expr3 -> Expr3 . AddOp Expr4                        (rule 60)
	Expr2 -> Expr3 .                                    (rule 63)

	'!='           reduce using rule 63
	'&&'           reduce using rule 63
	')'            reduce using rule 63
	'+'            shift, and enter state 87
	','            reduce using rule 63
	'-'            shift, and enter state 88
	';'            reduce using rule 63
	'<'            reduce using rule 63
	'<='           reduce using rule 63
	'=='           reduce using rule 63
	'>'            reduce using rule 63
	'>='           reduce using rule 63
	']'            reduce using rule 63
	'||'           reduce using rule 63

	AddOp          goto state 86

State 46

	Expr2 -> Expr2 . RelOp Expr3                        (rule 62)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 64)
	Expr1 -> Expr2 .                                    (rule 65)

	'!='           shift, and enter state 79
	'&&'           shift, and enter state 80
	')'            reduce using rule 65
	','            reduce using rule 65
	';'            reduce using rule 65
	'<'            shift, and enter state 81
	'<='           shift, and enter state 82
	'=='           shift, and enter state 83
	'>'            shift, and enter state 84
	'>='           shift, and enter state 85
	']'            reduce using rule 65
	'||'           reduce using rule 65

	RelOp          goto state 78

State 47

	Expr -> Expr1 . '||' Expr                           (rule 66)
	Expr -> Expr1 .                                     (rule 68)

	')'            reduce using rule 68
	','            reduce using rule 68
	';'            reduce using rule 68
	']'            reduce using rule 68
	'||'           shift, and enter state 77


State 48

	Stmt -> Expr . ';'                                  (rule 29)

	';'            shift, and enter state 76


State 49

	Expr -> Lambda .                                    (rule 67)

	')'            reduce using rule 67
	','            reduce using rule 67
	';'            reduce using rule 67
	']'            reduce using rule 67


State 50

	Expr5 -> '!' . Expr6                                (rule 56)

	'('            shift, and enter state 51
	'false'        shift, and enter state 56
	'true'         shift, and enter state 60
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 62
	L_quoted       shift, and enter state 63

	Ident          goto state 67
	Integer        goto state 34
	String         goto state 35
	ArrExpr        goto state 68
	Expr6          goto state 75

State 51

	Expr6 -> '(' . Expr ')'                             (rule 54)

	'!'            shift, and enter state 50
	'('            shift, and enter state 51
	'-'            shift, and enter state 52
	'false'        shift, and enter state 56
	'lambda'       shift, and enter state 58
	'true'         shift, and enter state 60
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 62
	L_quoted       shift, and enter state 63

	Ident          goto state 67
	Integer        goto state 34
	String         goto state 35
	ArrExpr        goto state 68
	Expr6          goto state 42
	Expr5          goto state 43
	Expr4          goto state 44
	Expr3          goto state 45
	Expr2          goto state 46
	Expr1          goto state 47
	Expr           goto state 74
	Lambda         goto state 49

State 52

	Expr5 -> '-' . Expr6                                (rule 55)

	'('            shift, and enter state 51
	'false'        shift, and enter state 56
	'true'         shift, and enter state 60
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 62
	L_quoted       shift, and enter state 63

	Ident          goto state 67
	Integer        goto state 34
	String         goto state 35
	ArrExpr        goto state 68
	Expr6          goto state 73

State 53

	Stmt -> ';' .                                       (rule 16)

	'!'            reduce using rule 16
	'('            reduce using rule 16
	'-'            reduce using rule 16
	';'            reduce using rule 16
	'boolean'      reduce using rule 16
	'break'        reduce using rule 16
	'continue'     reduce using rule 16
	'false'        reduce using rule 16
	'function'     reduce using rule 16
	'if'           reduce using rule 16
	'int'          reduce using rule 16
	'lambda'       reduce using rule 16
	'return'       reduce using rule 16
	'string'       reduce using rule 16
	'true'         reduce using rule 16
	'void'         reduce using rule 16
	'while'        reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	L_Ident        reduce using rule 16
	L_integ        reduce using rule 16
	L_quoted       reduce using rule 16


State 54

	Stmt -> 'break' .                                   (rule 30)

	'!'            reduce using rule 30
	'('            reduce using rule 30
	'-'            reduce using rule 30
	';'            reduce using rule 30
	'boolean'      reduce using rule 30
	'break'        reduce using rule 30
	'continue'     reduce using rule 30
	'false'        reduce using rule 30
	'function'     reduce using rule 30
	'if'           reduce using rule 30
	'int'          reduce using rule 30
	'lambda'       reduce using rule 30
	'return'       reduce using rule 30
	'string'       reduce using rule 30
	'true'         reduce using rule 30
	'void'         reduce using rule 30
	'while'        reduce using rule 30
	'{'            reduce using rule 30
	'}'            reduce using rule 30
	L_Ident        reduce using rule 30
	L_integ        reduce using rule 30
	L_quoted       reduce using rule 30


State 55

	Stmt -> 'continue' .                                (rule 31)

	'!'            reduce using rule 31
	'('            reduce using rule 31
	'-'            reduce using rule 31
	';'            reduce using rule 31
	'boolean'      reduce using rule 31
	'break'        reduce using rule 31
	'continue'     reduce using rule 31
	'false'        reduce using rule 31
	'function'     reduce using rule 31
	'if'           reduce using rule 31
	'int'          reduce using rule 31
	'lambda'       reduce using rule 31
	'return'       reduce using rule 31
	'string'       reduce using rule 31
	'true'         reduce using rule 31
	'void'         reduce using rule 31
	'while'        reduce using rule 31
	'{'            reduce using rule 31
	'}'            reduce using rule 31
	L_Ident        reduce using rule 31
	L_integ        reduce using rule 31
	L_quoted       reduce using rule 31


State 56

	Expr6 -> 'false' .                                  (rule 50)

	'!='           reduce using rule 50
	'%'            reduce using rule 50
	'&&'           reduce using rule 50
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'/'            reduce using rule 50
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	']'            reduce using rule 50
	'||'           reduce using rule 50


State 57

	Stmt -> 'if' . '(' Expr ')' Block                   (rule 26)
	Stmt -> 'if' . '(' Expr ')' Block 'else' Block      (rule 27)

	'('            shift, and enter state 72


State 58

	Lambda -> 'lambda' . '<' Type '(' ListArg ')' '>' Block    (rule 72)

	'<'            shift, and enter state 71


State 59

	Stmt -> 'return' . Expr ';'                         (rule 24)
	Stmt -> 'return' . ';'                              (rule 25)

	'!'            shift, and enter state 50
	'('            shift, and enter state 51
	'-'            shift, and enter state 52
	';'            shift, and enter state 70
	'false'        shift, and enter state 56
	'lambda'       shift, and enter state 58
	'true'         shift, and enter state 60
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 62
	L_quoted       shift, and enter state 63

	Ident          goto state 67
	Integer        goto state 34
	String         goto state 35
	ArrExpr        goto state 68
	Expr6          goto state 42
	Expr5          goto state 43
	Expr4          goto state 44
	Expr3          goto state 45
	Expr2          goto state 46
	Expr1          goto state 47
	Expr           goto state 69
	Lambda         goto state 49

State 60

	Expr6 -> 'true' .                                   (rule 49)

	'!='           reduce using rule 49
	'%'            reduce using rule 49
	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'/'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	']'            reduce using rule 49
	'||'           reduce using rule 49


State 61

	Stmt -> 'while' . '(' Expr ')' Stmt                 (rule 28)

	'('            shift, and enter state 66


State 62

	Integer -> L_integ .                                (rule 2)

	'!='           reduce using rule 2
	'%'            reduce using rule 2
	'&&'           reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	']'            reduce using rule 2
	'||'           reduce using rule 2


State 63

	String -> L_quoted .                                (rule 3)

	'!='           reduce using rule 3
	'%'            reduce using rule 3
	'&&'           reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	';'            reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	']'            reduce using rule 3
	'||'           reduce using rule 3


State 64

	ListType -> Type ',' ListType .                     (rule 44)

	')'            reduce using rule 44


State 65

	Type -> 'function' '<' Type '(' ListType ')' '>' .    (rule 41)

	'&'            reduce using rule 41
	'('            reduce using rule 41
	')'            reduce using rule 41
	','            reduce using rule 41
	L_Ident        reduce using rule 41


State 66

	Stmt -> 'while' '(' . Expr ')' Stmt                 (rule 28)

	'!'            shift, and enter state 50
	'('            shift, and enter state 51
	'-'            shift, and enter state 52
	'false'        shift, and enter state 56
	'lambda'       shift, and enter state 58
	'true'         shift, and enter state 60
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 62
	L_quoted       shift, and enter state 63

	Ident          goto state 67
	Integer        goto state 34
	String         goto state 35
	ArrExpr        goto state 68
	Expr6          goto state 42
	Expr5          goto state 43
	Expr4          goto state 44
	Expr3          goto state 45
	Expr2          goto state 46
	Expr1          goto state 47
	Expr           goto state 127
	Lambda         goto state 49

State 67

	ArrExpr -> Ident . '[' Expr ']'                     (rule 45)
	Expr6 -> Ident .                                    (rule 47)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 51)
